[IMP] view form: radio, fix and text align
bzr revid: chm@openerp.com-20130303114216-opzxi8f3nsltbnbm

--- a/addons/web/static/src/css/base.sass
+++ b/addons/web/static/src/css/base.sass
@@ -477,6 +477,8 @@ $sheet-padding: 16px
         background: $tag-bg-dark
         color: #eee
     .oe_form_field_radio
+        td,th
+            text-align: center
         .oe_radio_input
             cursor: pointer
             display: inline-block
